# boundary-first-flattening

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  bffConfig.cmake.in  index.html  style.css
apps/command-line/src/: CommandLine.cpp
apps/viewer/include/: Camera.h  RenderMesh.h  Viewer.h
apps/viewer/src/: Shader.cpp  Viewer.cpp
binaries/osx/: README.txt  libamd.2.4.6.dylib  libcamd.2.4.6.dylib  libccolamd.2.9.6.dylib  libcholmod.3.0.11.dylib  libsuitesparseconfig.4.5.4.dylib
binaries/osx-v1.5/: README.txt
binaries/osx-v1.5/bff.app/Contents/MacOS/: bff-command-line  bff-viewer  launch.sh  libbtf.dylib  libcamd.dylib  libccolamd.dylib  libldl.dylib
binaries/osx-v1.5/bff.app/Contents/Resources/: bff.icns
binaries/osx-v1.6/: README.txt
binaries/osx-v1.6/bff.app/Contents/: Info.plist
binaries/osx-v1.6/bff.app/Contents/MacOS/: bff-command-line  bff-viewer  libamd.dylib  libcholmod.dylib  libcolamd.dylib  libcxsparse.dylib  libklu.dylib  libumfpack.dylib
binaries/osx/bff.app/Contents/: Info.plist
binaries/osx/bff.app/Contents/MacOS/: bff  bff-command-line  bff-viewer  launch.sh  libamd.2.4.6.dylib  libbtf.1.2.6.dylib  libcamd.2.4.6.dylib  libccolamd.2.9.6.dylib  libcholmod.3.0.11.dylib  libcholmod.3.0.12.dylib  libcolamd.2.9.6.dylib  libcxsparse.3.2.0.dylib  libklu.1.3.8.dylib  libldl.2.2.6.dylib  libmetis.dylib  libnanogui.dylib  libspqr.2.0.8.dylib  libspqr.dylib  libsuitesparseconfig.5.0.0.dylib  libsuitesparseconfig.5.3.0.dylib  libumfpack.5.7.6.dylib  libumfpack.5.7.7.dylib
binaries/osx/bff.app/Contents/Resources/: bff.icns
binaries/windows/: bff.lib
binaries/windows-v1.1/: README.txt
binaries/windows-v1.5/: README.txt  bff.lib
binaries/windows-v1.6/: README.txt
cmake/: FindOpenMesh.cmake  FindSuiteSparse.cmake
command-line/: CommandLine.cpp
include/bff/linear-algebra/: Cholesky.h  Cholesky.inl  DenseMatrix.h  DenseMatrix.inl  SparseMatrix.h  Vector.h  Vector.inl
include/bff/mesh/: Corner.h  CutIterator.h  CutIterator.inl  Edge.h  Face.h  GeometryUtils.h  HalfEdge.h  Mesh.h  MeshData.h  MeshData.inl  MeshIO.h  PolygonSoup.h  Spline.h  Types.h  Vertex.h
include/bff/project/: Bff.h  BinPacking.h  ConePlacement.h  Cutter.h  DisjointSets.h  Distortion.h  Generators.h  HoleFiller.h
linear-algebra/include/: Cholesky.h  Cholesky.inl  Common.h  DenseMatrix.h  DenseMatrix.inl  SparseMatrix.h  SparseMatrix.inl  Vector.h  Vector.inl
linear-algebra/src/: Common.cpp
mesh/include/: Corner.h  Corner.inl  CutIterator.h  CutIterator.inl  Edge.h  Edge.inl  Face.h  Face.inl  FaceMesh.h  HalfEdge.h  HalfEdge.inl  Mesh.h  MeshData.h  MeshData.inl  MeshIO.h  Spline.h  Spline.inl  Types.h  Vertex.h  Vertex.inl
mesh/src/: Corner.cpp  Edge.cpp  Face.cpp  HalfEdge.cpp  Mesh.cpp  MeshIO.cpp  Vertex.cpp
openmesh-interface/include/: bffOpenMesh.hpp
project/include/: Bff.h  BinPacking.h  ConePlacement.h  Cutter.h  DisjointSets.h  Distortion.h  Generators.h  HoleFiller.h
project/src/: Bff.cpp  BinPacking.cpp  ConePlacement.cpp  Cutter.cpp  Distortion.cpp  Generators.cpp  HoleFiller.cpp
src/linear-algebra/: Common.cpp
src/mesh/: Corner.cpp  Edge.cpp  Face.cpp  HalfEdge.cpp  Mesh.cpp  MeshIO.cpp  PolygonSoup.cpp  Vertex.cpp
src/project/: Bff.cpp  BinPacking.cpp  ConePlacement.cpp  Cutter.cpp  Distortion.cpp  Generators.cpp  HoleFiller.cpp
viewer/include/: Camera.h  Camera.inl  RenderMesh.h  Shader.h  ShadersSource.h  Spline.h  Spline.inl  Viewer.h
viewer/src/: RenderMesh.cpp  Shader.cpp  Viewer.cpp  main.cpp
